src/test/deca/syntax/invalid/while-conditionWithoutParenthesis.synt
while-conditionWithoutParenthesis.deca:2: